test-target/operator-single-install-mode.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ops

---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-apps
