test-target/egress-deny-all-np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
spec:
  podSelector:
    matchLabels:
      test-network-function.com/container: target
  policyTypes:
    - Egress
