test-target/ingress-deny-all-np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector:
    matchLabels:
      test-network-function.com/container: target
  policyTypes:
    - Ingress
